<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AddressBook</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="call">Call</string>
    <string name="facebook">Facebook</string>
    <string name="avatar">Contact photo</string>

</resources>
