<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/full_name"
            android:hint="@string/full_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:id="@+id/phone"
            android:layout_below="@id/full_name"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:id="@+id/email"
            android:layout_below="@id/phone"
            android:layout_alignParentLeft="true"/>

    <View android:layout_width="0dp"
          android:layout_height="0dp"
          android:id="@+id/strut"
          android:layout_centerHorizontal="true" />
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="closeActivity"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/strut" />
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="addContact"
            android:id="@+id/button2"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/strut"/>
</RelativeLayout>
